初始化了1.html内容

--- a/1.html
+++ b/1.html
@@ -20,7 +20,7 @@
 
                 //     console.log(res);
                 // })
-                //用ajax
+                //用ajax  2222
                 $.ajax({
                     type: 'GET',
                     url: 'http://www.liulongbin.top:3006/api/getbooks',
